--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jonathan Boulanger-Weill"
-  avatar           : "ID_Harvard.jpg"
+  avatar           : "profile.png"
   bio              : "Post-doctoral Fellow at Harvard University"
   location         : "Cambridge, MA, USA"
   employer         :
