--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jonathan Boulanger-Weill"
+  name             : "Jonathan Boulanger"
   avatar           : "images/ID.png"
   bio              : "Post-doctoral Fellow at Harvard University"
   location         : "Cambridge, MA, USA"
