--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jonathan Boulanger"
-  avatar           : "images/ID.png"
+  avatar           : "ID.png"
   bio              : "Post-doctoral Fellow at Harvard University"
   location         : "Cambridge, MA, USA"
   employer         :
