--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ atom_feed:
 
 
 #Craft
-header: /assets/images/filename.jpg
+header: /assets/DSC01372.JPG
 
 # SEO Related
 google_site_verification :
