--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ defaults:
     scope:
       path: "" # an empty string here means all files in the project
     values:
-      layout: "default"
+      layout: splash
       
 ---
 header:
